# rcc

./: AUTHOR  ChangeLog  Copyright.txt  Makefile  Makefile.alpha  Makefile.alphaev6  Makefile.am  Makefile.i386  Makefile.in  autogen.sh  config.h.in  configure  configure.ac  make_name_map_util.pl  rcc.pc.in  run-mgg.r
OpenAnalysis-rcc/: INSTALL  Makefile.am  Makefile.quick  README  Rice.copyright  autogen  config.doxygen  configure.ac
OpenAnalysis-rcc/src/: Makeinclude.config  Makeinclude.rules
OpenAnalysis-rcc/src/OpenAnalysis/: config.cpp
OpenAnalysis-rcc/src/test/: CmdParams.c  CmdParams.h  IRHandleIterators.hpp  Makefile  Makefile.inc  NotationGenerator.hpp  StrToHandle.hpp  SubsidiaryIR.cpp  SubsidiaryIR.hpp  SubsidiaryIR_output.cpp  driver_oacopy.cpp  loadNotation.cpp  regressFIAliasTestsOut.script  testSubIR.hpp
lib/: Makefile.am  rcc_assert.r  rcc_generated_header.h  rcc_lib.c  rcc_lib.h  rcc_prot.h  replacements.c  replacements.h  well_behaved.r
src/: ArgMatcher.cc  ArgMatcher.h  CScope.cc  CScope.h  CheckProtect.h  CodeGen.cc  CodeGen.h  CodeGenUtils.cc  CodeGenUtils.h  CommandLineArgs.cc  CommandLineArgs.h  GetName.c  GetName.cc  GetName.h  LoopContext.cc  LoopContext.h  Macro.cc  Macro.cpp  Macro.h  Macro.hpp  MacroFactory.hpp  Main.cc  Main.h  Makefile.am  Makefile.in  Metrics.cc  Metrics.h  MyRInternals.h  Output.cc  Output.h  ParseInfo.cc  ParseInfo.h  R_parser.c  R_parser.cc  R_parser.h  Visibility.cc  Visibility.h  codegen.cc  codegen.h  foo.cpp  (+16 more)
src/OpenAnalysis/: Makefile.am  Makefile.in
src/OpenAnalysis/Activity/: ActiveStandard.cpp  DepDFSet.cpp  InterActive.hpp  InterActiveFortran.hpp  ManagerICFGDep.cpp  ManagerICFGUseful.cpp  ManagerICFGVaryActive.cpp  ManagerUsefulStandard.cpp  UsefulStandard.hpp  VaryStandard.hpp
src/OpenAnalysis/AffineExpr/: AffineExprAbstraction.cpp  AffineExprAbstraction.hpp
src/OpenAnalysis/Alias/: AliasTag.cpp  AliasTag.hpp  AliasTagResults.cpp  AliasTagResults.hpp  AliasTagSet.cpp  InterAliasMap.hpp  ManagerFIAlias.cpp  ManagerFIAlias.cpp~  ManagerFIAlias.hpp  ManagerFIAliasAliasTag.cpp  ManagerFIAliasAliasTag.hpp  NotationGenerator.hpp
src/OpenAnalysis/CFG/: CFG.cpp  EachCFGInterface.hpp  ManagerCFG.cpp  ManagerCFG.hpp
src/OpenAnalysis/CSFIActivity/: DUGStandard.cpp  DUGStandard.hpp  ManagerDUActive.cpp
src/OpenAnalysis/CSFSActivity/: DUGInterface.hpp  DUGStandard.cpp  ManagerDUActive.hpp  ManagerDUGStandard.cpp  README
src/OpenAnalysis/CallGraph/: ManagerCallGraph.cpp
src/OpenAnalysis/DataDep/: DataDepResults.cpp  (+3 more)
src/analysis/: AnalysisException.cc  AnalysisException.h  AnalysisResults.cc  AnalysisResults.h  Analyst.cc  Analyst.h  Annotation.cc  Annotation.h  AnnotationBase.cc  AnnotationBase.h  AnnotationMap.cc  AnnotationMap.h  AnnotationSet.cc  AnnotationSet.h  Assertion.cc  Assertion.h  BasicFuncInfo.cc  BasicFuncInfo.h  BasicFuncInfoAnnotationMap.cc  BasicFuncInfoAnnotationMap.h  BasicVar.cc  BasicVar.h  BasicVarAnnotationMap.cc  BindingAnalysis.cc  BindingAnalysis.h  CEscapeInfo.cc  CEscapeInfo.h  CEscapeInfoAnnotationMap.cc  CEscapeInfoAnnotationMap.h  CallByValueAnalysis.cc  CallByValueAnalysis.h  CallByValueInfoAnnotationMap.cc  CallByValueInfoAnnotationMap.h  CallByValueTraversal.cc  CallGraphAnnotation.cc  CallGraphAnnotation.h  CallGraphAnnotationMap.cc  CallGraphAnnotationMap.h  CallGraphBuilder.cc  CallGraphBuilder.h  (+208 more)
src/annotations/: Annotation.cpp  Annotation.hpp  AnnotationBase.cpp  AnnotationBase.hpp  AnnotationSet.cpp  AnnotationSet.hpp  Makefile.am  PropertySet.cpp  PropertySet.hpp  PropertySetMgr.cpp  PropertySetMgr.hpp
src/appl/: blas.f
src/include/: ClassName.h  Defn.h  Protection.h  Rinternals.h  tree.hh
src/main/: RNG.c  apse.h  array.c  builtin.c  context.c  deparse.c  dstruct.c  duplicate.c  envir.c  eval.c  main.c  memory.c  names.c  print.c  relop.c  saveload.c  serialize.c  size.c  subscript.c  util.c
src/matmul/: Makefile.am  TransformMatMul.cc  TransformMatMul.h  TransposeMatMul.R  TransposeMatMul.c
src/scripts/: BATCH  COMPILE.in  INSTALL.in  LINK  REMOVE.in  Rd2dvi  Rd2txt  Rdconv.in  Rprof.in  SHLIB.in  Sd2Rd.in  build.in  check.in  config  f77.in  texi2dvi
src/support/: Debug.h  DumpMacros.h  IntIncMap.cc  IntIncMap.h  Makefile.am  Parser.cc  Parser.h  RccError.cc  RccError.h  StringUtils.cc  StringUtils.h  util.cc  util.h
src/test/: NotationGenerator.cpp  TestAliasIRInterface.cpp  TestAliasIRInterface.hpp  driver_TestGraph.cpp  driver_output.cpp  driver_regress.cpp  genFIAliasTestsOut.script  loadNotation.hpp  oa.l  oa.y  testSubIR.cpp
tests/: .nfs00425fe900000003  Makefile.am  analyze.r  dirfun  geneshaving.r  mgg00.r  run-test  run-test.in  sep_use.r  so-run  test00_constants.r  test01_fundef_in_loop.r  test01_geneInits.r  test02_defun.r  test03_arrayindexing.r  test04_for.r  test06_myrgamma.r  test07_if_nestedarrayindex.r  test08_closure.r  test11_env.r  test12_multireturn.r  test14_samename.r  test15_source.r  test16_usemethod.r  test20_if.r  test22_expensive_fn.r  test25_recursion.r  test26_return_fn.r  test27_fundef_scope.r  test29_fib.r  test30_scoping.r  test31_array.r  test32_fun_redef.r  test33_partial_array.r  test34_redef.r  test36_change_formals.r  test37_change_body.r  test_foo_15.r  test_sep_def.r  trials.r
tests/performance/: Makefile.am  array.r  fib.r  fun_in_loop.r  mgg00_inline.r  run-test.in
tests/regression/: Makefile.am  anon1.r  anon2.r  arrayindexing.r  assign_contains_fundef.r  assign_ops_scope.r  assign_ops_scope1.r  assign_ops_scope2.r  beeson.r  break.r  calling.r  closure.r  closure_change_body.r  closure_change_env.r  closure_change_formals.r  constants.r  context.r  default_arg.r  default_arg2.r  double_arrow_declaration_library_name.r  double_bracket.r  ellipsis.r  environment.r  escape.r  expr_tree.r  extend_array.r  fib-implicit-return.r  fib.r  fib2.r  for.r  for2.r  for_down.r  for_var.r  for_var2.r  free_multiple_scopes.r  free_one_scope.r  fun_name_scope.r  fun_redef.r  fundef.r  fundef_after.r  (+47 more)
tests/scripts/: Makefile.am  analyze.pl  format-results.pl  run-compiled.in  run-interpreted.in  run-test.in
(+912 files in other folders)
