# -*-Mode: makefile;-*-
# $Header: /Volumes/cvsrep/developer/OpenAnalysis/Makefile.am,v 1.72 2005/03/02 19:49:45 ntallent Exp $

#############################################################################
#
# File:
#   $Source: /Volumes/cvsrep/developer/OpenAnalysis/Makefile.am,v $
#
# Description:
#   *Process with automake to produce Makefile.in*
#
#   Note: All local variables are prefixed with MY to prevent name
#   clashes with automatic automake variables.
#
#############################################################################

# We do not want the standard GNU files (NEWS README AUTHORS ChangeLog...)
AUTOMAKE_OPTIONS = foreign

#############################################################################
# Automake rules
#############################################################################

SUBDIRS = \
	src

#############################################################################
# Other rules
#############################################################################
